# capstone-swe690

./: .gitignore  README.md  client_secret_twitter.json  groups  newrelic.js  package.json  project.config  requirements.txt  setup.cfg
api_server/: mqtt-ctl.js  package.json  server.js
api_server/db/models/: agent.js  alarm.js
api_server/routes/: api.js
gui/: app.js  index.html  styles.css
piguard/common/: config.py
piguard_manager/: agent_watcher.js  authenticate.js  mqtt-ctl.js  server.js  twitter.js  utils.js
piguard_manager/db/: connect.js
piguard_manager/db/models/: agent.js  alarm.js
piguard_manager/gui/: app.js  container.htm  index.html  login.html  modal-form.html  nav.htm  nav_loggedin.htm  nav_loggedout.htm  styles.css
piguard_manager/routes/: api.js
sandbox/: 1_mqttrc  2_mqttrc  Dockerfile  README  build.sh  mqtt_agent.py  mqtt_agent2.py  mqtt_agent3.py  mqtt_agent4.py  mqtt_ctl.py  piguard-agent.service  piguard.ini.template  pir.py  start.sh  twitter.py  wifi_reboot.sh
