[metadata]
name = pigurad
summary = piguard
description-file =
    README.rst
author = dahoo
author-email = xyzjerry@gmail.com
home-page = https://twitter.com/securitybot5493
classifier =
    Environment :: PiGuard
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    piguard

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1
